--- a/client/src/app/search-twitter/search-twitter.component.html
+++ b/client/src/app/search-twitter/search-twitter.component.html
@@ -4,10 +4,7 @@
   <br />
   <br />
   <div class="jumbotron">
-    <div class="page-header">
-      <h1 class="display-3">Hello!</h1>
-    </div>
-    <p class="lead">Get started by searching for a twitter user below!</p>
+    <h2>Get started by searching for a twitter user below!</h2>
   </div>
 </div>
 
