--- a/client/src/app/sentiment/sentiment.component.html
+++ b/client/src/app/sentiment/sentiment.component.html
@@ -1,8 +1,9 @@
 <form #sentimentForm = "ngForm" (ngSubmit) = "onSubmit(sentimentForm)">
   <div class ="form-group">
     <label for="sentimentBar"> Type something in </label>
-    <input ngModel type="text" id="sentimentBar" name="sentimentBar"  
+    <input ngModel type="text" id="sentimentBar" name="sentimentBar"
       placeholder="sentiment">
     <input type="submit" value="Submit">
   </div>
 </form>
+<!-- compile -->
